package wickr.proto;

message Handshake {

    required uint32 version = 1;

    message Seed {
        optional bytes pubkey = 1;
    }
    
    message KeyExchange {
        optional bytes sender_pub = 1;
        optional bytes exchange_data = 2;
    }

    message Response {
        optional KeyExchange key_exchange = 2;
        optional Seed response_key = 3;
    }

    message Finish {
        optional KeyExchange key_exchange = 2;
    }

    oneof payload {
        Seed seed = 2;
        Response response = 3;
        Finish finish = 4;
    }
}

message StreamKey {
    optional bytes cipher_key = 1;
    optional bytes evolution_key = 2;
    optional uint32 packets_per_evo = 3;
}
